--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <iframe
                 src="https://www.youtube.com/embed/m1PjgtAjt3I">
             </iframe>
+            <button id="alertButton">Click Me!</button>
         </center>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
